--- a/templates/base.html
+++ b/templates/base.html
@@ -1,39 +1,40 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet'/>
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="{% static 'css/all.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/all.css' %}"/>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}"/>
     <!-- Custom -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
     <!-- Lightbox -->
-    <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}"/>
     <title>مشاور املاک {% block title %} {% endblock %}</title>
 
-  </head>
-  <body>
+</head>
+<body>
 
-    <!-- Top Bar -->
-    {% include 'partials/_topbar.html' %}
+<!-- Top Bar -->
+{% include 'partials/_topbar.html' %}
 
-    <!-- NavBar -->
-    {% include 'partials/_navbar.html' %}
+<!-- NavBar -->
+{% include 'partials/_navbar.html' %}
 
-    <!-- Main Content -->
-    {% block content %} {% endblock %}
+<!-- Main Content -->
+{% block content %} {% endblock %}
 
-    <!-- FooteravBar -->
-    {% include 'partials/_footer.html' %}
+<!-- FooteravBar -->
+{% include 'partials/_footer.html' %}
 
-    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'js/lightbox.min.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-  </body>
+<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'js/lightbox.min.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
+</body>
 </html>
