--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-4"><i class="fas fa-phone"></i> 33287585</div>
       <div class="col-md-4">
-        <i class="fas fa-map-marker-alt"></i> رشت - دللتللاالالالالاهختدعیا - یسیع
+        <i class="fas fa-map-marker-alt"></i> رشت -
       </div>
       <div class="col-md-4">
         <div class="social text-right">
@@ -14,7 +14,6 @@
           <a href="#">
             <i class="fab fa-whatsapp"></i>
           </a>
-
         </div>
       </div>
     </div>
