--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,185 +2,257 @@
 
 {% load humanize %}
 
-{% block title %} | Welcome {% endblock %}
+{% block title %} | خوش آمدید {% endblock %}
 
 {% block content %}
 
-<!-- Showcase -->
-<section id="showcase">
-  <div class="container text-center">
-    <div class="home-search p-5">
-      <div class="overlay p-5">
-        <h1 class="display-4 mb-4">
-          مشاور املاک
-        </h1>
-        <h1>
-            {{ category.title }}
+    <!-- Showcase -->
+    <section id="showcase">
+        <div class="container text-center">
+            <div class="home-search p-5">
+                <div class="overlay p-5">
+                    <h1 class="display-4 mb-4">
+                        مشاور املاک
+                    </h1>
+                    {% for cat in category %}
+                        <a href="{% url 'category' cat.slug %}" style="color: white; font-size: 2em">
+                            {{ cat.title }}
+                        </a>
+                    {% endfor %}
+                    <div class="search">
+                        <form action="{% url 'search' %}">
+                            <!-- Form Row 1 -->
+                            <div class="form-row">
+                                <div class="col-md-6 mb-3">
+                                    <label class="sr-only">شهر</label>
+                                    <input
+                                            type="text"
+                                            name="keywords"
+                                            class="form-control"
+                                            placeholder="شهر"
+                                    />
+                                </div>
 
-        </h1>
-        <div class="search">
-          <form action="{% url 'search' %}">
-            <!-- Form Row 1 -->
-            <div class="form-row">
-              <div class="col-md-6 mb-3">
-                <label class="sr-only">شهر</label>
-                <input
-                  type="text"
-                  name="keywords"
-                  class="form-control"
-                  placeholder="شهر"
-                />
-              </div>
-
-              <div class="col-md-6 mb-3">
-                <label class="sr-only">منطقه ، محله</label>
-                <input
-                  type="text"
-                  name="city"
-                  class="form-control"
-                  placeholder="منطقه ، محله"
-                />
-              </div>
+                                <div class="col-md-6 mb-3">
+                                    <label class="sr-only">منطقه ، محله</label>
+                                    <input
+                                            type="text"
+                                            name="city"
+                                            class="form-control"
+                                            placeholder="منطقه ، محله"
+                                    />
+                                </div>
 
 
-            </div>
-            <!-- Form Row 2 -->
-            <div class="form-row">
-              <div class="col-md-6 mb-3">
-                <label class="sr-only">اتاق خواب ها</label>
-                <select name="bedrooms" class="form-control">
-                  <option selected="true" disabled="disabled"> تعداد اتاق خواب</option>
-                  {% for key, value in bedroom_choices.items %}
-                    <option value="{{ key }}">{{ value }}</option>
-                  {% endfor %}
-                </select>
-              </div>
-              <div class="col-md-6 mb-3">
-                <select name="price" class="form-control" id="type">
-                  <option selected="true" disabled="disabled"
-                    >حداکثر قیمت</option>
-                    {% for key, value in price_choices.items %}
-                      <option value="{{ key }}">{{ value }}</option>
-                   {% endfor %}
-                </select>
-              </div>
-            </div>
-            <button class="btn btn-secondary btn-block mt-4" type="submit">
-              جست و جو
-            </button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<br/>
-
-<!-- Alerts -->
-{% include 'partials/_alerts.html' %}
-
-<!-- Listings -->
-<section id="listings" class="py-5">
-  <div class="container">
-    <h3 class="text-center mb-3">فهرست املاک</h3>
-    <div class="row">
-
-      {% if listings %}
-        {% for listing in listings %}
-
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card listing-preview">
-            <img
-              class="card-img-top"
-              src="{{listing.photo_main.url}}"
-              alt=""
-            />
-            <div class="card-img-overlay">
-              <h2>
-                <span class="badge badge-secondary text-white">${{ listing.price | intcomma }}</span>
-              </h2>
-            </div>
-            <div class="card-body">
-              <div class="listing-heading text-center">
-                <h4 class="text-primary">{{ listing.title }}</h4>
-                <p>
-                  <i class="fas fa-map-marker text-secondary"></i> {{ listing.city }} {{ listing.state }} {{ listing.zipcode }}
-                </p>
-              </div>
-              <hr />
-              <div class="row py-2 text-secondary">
-                <div class="col-6">
-                  <i class="fas fa-th-large"></i> متر مربع: {{ listing.sqft }}
+                            </div>
+                            <!-- Form Row 2 -->
+                            <div class="form-row">
+                                <div class="col-md-6 mb-3">
+                                    <label class="sr-only">اتاق خواب ها</label>
+                                    <select name="bedrooms" class="form-control">
+                                        <option selected="true" disabled="disabled"> تعداد اتاق خواب</option>
+                                        {% for key, value in bedroom_choices.items %}
+                                            <option value="{{ key }}">{{ value }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <select name="price" class="form-control" id="type">
+                                        <option selected="true" disabled="disabled"
+                                        >حداکثر قیمت
+                                        </option>
+                                        {% for key, value in price_choices.items %}
+                                            <option value="{{ key }}">{{ value }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <button class="btn btn-secondary btn-block mt-4" type="submit">
+                                جست و جو
+                            </button>
+                        </form>
+                    </div>
                 </div>
-                <div class="col-6"><i class="fas fa-car"></i> پارکینگ: {{ listing.garage }}</div>
-              </div>
-              <div class="row py-2 text-secondary">
-                <div class="col-6"><i class="fas fa-bed"></i> اتاق خواب: {{ listing.bedrooms }}</div>
-                <div class="col-6"><i class="fas fa-bath"></i> سرویش بهداشتی: {{ listing.bathrooms }}</div>
-              </div>
-              <hr />
-              <div class="row py-2 text-secondary">
-                <div class="col-6"><i class="fas fa-user"></i> {{ listing.realtor }}</div>
-              </div>
-              <div class="row text-secondary pb-2">
-                <div class="col-6"><i class="fas fa-clock"></i> {{ listing.list_date | timesince }}</div>
-              </div>
-              <hr />
-              <a href="{% url 'listing' listing.id %}" class="btn btn-primary btn-block">جزئیات بیشتر</a>
             </div>
-          </div>
         </div>
+    </section>
+
+    <br/>
+
+    <!-- Alerts -->
+    {% include 'partials/_alerts.html' %}
+
+    <!-- Listings -->
+    <section id="listings" class="py-5">
+        <div class="container">
+            <h3 class="text-center mb-3">فهرست املاک</h3>
+            <div class="row">
+
+                {% if listings %}
+                    {% for listing in listings %}
+
+                        <div class="col-md-6 col-lg-4 mb-4">
+                            <div class="card listing-preview">
+                                <img
+                                        class="card-img-top"
+                                        src="{{ listing.photo_main.url }}"
+                                        alt=""
+                                />
+                                <div class="card-img-overlay">
+                                    <h2>
+                                        <span class="badge badge-secondary text-white">${{ listing.price | intcomma }}</span>
+                                    </h2>
+                                </div>
+                                <div class="card-body">
+                                    <div class="listing-heading text-center">
+                                        <h4 class="text-primary">{{ listing.title }}</h4>
+                                        <p>
+                                            <i class="fas fa-map-marker text-secondary"></i> {{ listing.city }} {{ listing.state }} {{ listing.zipcode }}
+                                        </p>
+                                    </div>
+                                    <hr/>
+                                    <div class="row py-2 text-secondary">
+                                        <div class="col-6">
+                                            <i class="fas fa-th-large"></i> متر مربع: {{ listing.sqft }}
+                                        </div>
+                                        <div class="col-6"><i class="fas fa-car"></i> پارکینگ: {{ listing.garage }}
+                                        </div>
+                                    </div>
+                                    <div class="row py-2 text-secondary">
+                                        <div class="col-6"><i class="fas fa-bed"></i> اتاق خواب: {{ listing.bedrooms }}
+                                        </div>
+                                        <div class="col-6"><i class="fas fa-bath"></i> سرویش
+                                            بهداشتی: {{ listing.bathrooms }}</div>
+                                    </div>
+                                    <hr/>
+
+                                    <div class="row py-2 text-secondary">
+                                        <div class="col-6"><i class="fas fa-user"></i> {{ listing.realtor }}</div>
+                                    </div>
+
+                                    <div class="row py-2 text-secondary">
+                                        <div class="col-6"><i
+                                                class="fas fa-clock"></i> {{ listing.list_date | timesince }}</div>
+                                    </div>
+
+                                    <div class="row text-secondary">
+                                        <div class="col-6"><i class="fas fa-hashtag"></i>
+                                            {% for cat in listing.category.all %}
+                                            <a href="{% url 'category' cat.slug %}">
+                                                #{{ cat.title }}
+                                            </a>
+                                        {% endfor %}
+                                        </div>
+                                    </div>
+                                    <hr/>
+                                    <a href="{% url 'listing' listing.id %}" class="btn btn-primary btn-block">جزئیات
+                                        بیشتر</a>
+                                </div>
+                            </div>
+                        </div>
 
 
-        {% endfor %}
+                    {% endfor %}
 
-      {% else %}
-        <div class="col-md-12">
-          <p>ملکی ثبت نشده است</p>
+                {% else %}
+                    <div class="col-md-12">
+                        <p>ملکی ثبت نشده است</p>
+                    </div>
+                {% endif %}
+
+
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    {% if listings.has_other_pages %}
+                        <ul class="pagination">
+                            {% if listings.has_previous %}
+                                <li class="page-item">
+                                    <a href="?page={{ listings.previous_page_number }}" class="page-link"
+                                    >&laquo;</a
+                                    >
+                                </li>
+
+                            {% else %}
+
+                                <li class="page_item disabled">
+                                    <a class="page-link">&laquo;</a>
+                                </li>
+
+                            {% endif %}
+
+                            {% for i in listings.paginator.page_range %}
+
+                                {% if listings.number == i %}
+
+                                    <li class="page-item active">
+                                        <a class="page-link">{{ i }}</a>
+                                    </li>
+
+                                {% else %}
+                                    <li class="page-item">
+                                        <a href="?page={{ i }}" class="page-link">{{ i }}</a>
+                                    </li>
+                                {% endif %}
+
+                            {% endfor %}
+
+                            {% if listings.has_next %}
+                                <li class="page-item">
+                                    <a href="?page={{ listings.next_page_number }}" class="page-link"
+                                    >&raquo;</a
+                                    >
+                                </li>
+
+                            {% else %}
+
+                                <li class="page_item disabled">
+                                    <a class="page-link">&raquo;</a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    {% endif %}
+                </div>
+            </div>
         </div>
-      {% endif %}
+        </div>
+    </section>
 
-
-    </div>
-  </div>
-</section>
-
-<section id="services" class="py-5 bg-secondary text-white">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-4">
-        <i class="fas fa-comment fa-4x mr-4"></i>
-        <hr />
-          <h3>خدمات مشاورهای </h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
-          debitis nam! Repudiandae, provident iste consequatur hic dignissimos
-          ratione ea quae.
-        </p>
-      </div>
-      <div class="col-md-4">
-        <i class="fas fa-home fa-4x mr-4"></i>
-        <hr />
-        <h3>مدیریت صحیح</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
-          debitis nam! Repudiandae, provident iste consequatur hic dignissimos
-          ratione ea quae.
-        </p>
-      </div>
-      <div class="col-md-4">
-        <i class="fas fa-suitcase fa-4x mr-4"></i>
-        <hr />
-        <h3>اجاره ، فروش و رهن</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
-          debitis nam! Repudiandae, provident iste consequatur hic dignissimos
-          ratione ea quae.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
+    <section id="services" class="py-5 bg-secondary text-white">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <i class="fas fa-comment fa-4x mr-4"></i>
+                    <hr/>
+                    <h3>خدمات مشاورهای </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
+                        debitis nam! Repudiandae, provident iste consequatur hic dignissimos
+                        ratione ea quae.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <i class="fas fa-home fa-4x mr-4"></i>
+                    <hr/>
+                    <h3>مدیریت صحیح</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
+                        debitis nam! Repudiandae, provident iste consequatur hic dignissimos
+                        ratione ea quae.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <i class="fas fa-suitcase fa-4x mr-4"></i>
+                    <hr/>
+                    <h3>اجاره ، فروش و رهن</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,
+                        debitis nam! Repudiandae, provident iste consequatur hic dignissimos
+                        ratione ea quae.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
