--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -1,172 +1,145 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
-{% load humanize %} 
+{% load humanize %}
 
 {% block title %} | Search Results {% endblock %}
 
 {% block content %}
 
-<section id="showcase-inner" class="showcase-search text-white py-5">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-12">
-        <form action="{% url 'lister:search' %}">
-          <!-- Form Row 1 -->
-          <div class="form-row">
-            <div class="col-md-4 mb-3">
-              <label class="sr-only">کلمه کلیدی</label>
-              <input type="text" name="keywords" class="form-control" placeholder="Keyword (Pool, Garage, etc)" value="{{ values.keywords }}">
-            </div>
-
-            <div class="col-md-4 mb-3">
-              <label class="sr-only">شهر</label>
-              <input type="text" name="city" class="form-control" placeholder="City" value="{{ values.city }}">
-            </div>
-
-            <div class="col-md-4 mb-3">
-              <label class="sr-only">منطقه</label>
-              <select name="state" class="form-control">
-                <option selected="true" disabled="disabled">منطقه</option>
-                {% for key, value in state_choices.items %}
-                 
-                  <option value="{{ key }}" 
-
-                  {% if key == values.state %} 
-                    selected
-                  {% endif%}
-                  
-                  >{{ value }}</option>
-                {% endfor %}
-              </select>
-            </div>
-          </div>
-          <!-- Form Row 2 -->
-          <div class="form-row">
-            <div class="col-md-6 mb-3">
-              <label class="sr-only">اتاق خواب</label>
-              <select name="bedrooms" class="form-control">
-                <option selected="true" disabled="disabled">اتاق خواب</option>
-                {% for key, value in bedroom_choices.items %}
-                  <option value="{{ key }}"
-                  
-                  {% if key == values.bedrooms %} 
-                    selected
-                  {% endif%}
-
-                  >{{ value }}</option>
-                {% endfor %}
-              </select>
-            </div>
-            <div class="col-md-6 mb-3">
-              <select name="price" class="form-control">
-                <option selected="true" disabled="disabled">حداکثر قیمت</option>
-                  {% for key, value in price_choices.items %}
-                    <option value="{{ key }}"
-                    
-                    {% if key == values.price %} 
-                      selected
-                    {% endif%}
-                  
-                  >{{ value }}</option>
-                  {% endfor %}
-              </select>
-            </div>
-          </div>
-          <button class="btn btn-secondary btn-block mt-4" type="submit">جست و جو</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Breadcrumb -->
-<section id="bc" class="mt-3">
-  <div class="container">
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-          <a href="{% url 'index' %}">
-            <i class="fas fa-home"></i> خانه</a>
-        </li>
-        <li class="breadcrumb-item">
-          <a href="{% url 'listings' %}">فهرست املاک</a>
-        </li>
-        <li class="breadcrumb-item active"> نتیجه جست و جو</li>
-      </ol>
-    </nav>
-  </div>
-</section>
-
-<!-- Listings -->
 <section id="listings" class="py-4">
-  <div class="container">
-    <div class="row">
-
-      {% if listings %}
-       {% for listing in listings %}
-      <div class="col-md-6 col-lg-4 mb-4">
-        <div class="card listing-preview">
-          <img class="card-img-top" src="{{ listing.photo_main.url }}" alt="" />
-          <div class="card-img-overlay">
-            <h2>
+        <div class="container">
+            <div class="row">
+                {% if object_list %}
+                    {% for listing in object_list %}
+                        <div class="col-md-6 col-lg-4 mb-4">
+                            <div class="card listing-preview">
+                                <img class="card-img-top" src="{{ listing.photo_main.url }}" alt=""/>
+                                <div class="card-img-overlay">
+                                    <h2>
               <span class="badge badge-secondary text-white"
-                >${{ listing.price | intcomma }}</span
+              >${{ listing.price | intcomma }}</span
               >
-            </h2>
-          </div>
-          <div class="card-body">
-            <div class="listing-heading text-center">
-              <h4 class="text-primary">{{ listing.title }}</h4>
-              <p>
-                <i class="fas fa-map-marker text-secondary"></i>
-                {{listing.city}} {{listing.state}} {{listing.zip}}
-              </p>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-6">
-                <i class="fas fa-th-large"></i> متر مربع: {{listing.sqft}}
-              </div>
-              <div class="col-6">
-                <i class="fas fa-car"></i> پارکینگ: {{listing.garage}}
-              </div>
-            </div>
-            <div class="row py-2 text-secondary">
-              <div class="col-6">
-                <i class="fas fa-bed"></i> اتاق خواب: {{listing.bedrooms}}
-              </div>
-              <div class="col-6">
-                <i class="fas fa-bath"></i> سرویس بهداشتی: {{listing.bathrooms}}
-              </div>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-12">
-                <i class="fas fa-user"></i> {{listing.realtor}}
-              </div>
-            </div>
-            <div class="row text-secondary pb-2">
-              <div class="col-6">
-                <i class="fas fa-clock"></i> {{listing.list_date | timesince }}
-              </div>
-            </div>
-            <hr />
-            <a
-              href="{% url 'listing' listing.id %}"
-              class="btn btn-primary btn-block"
-              >جزئیات بیشتر</a>
-          </div>
-        </div>
-      </div>
-      {% endfor %} 
-      {% else %}
-      <div class="col-md-12">
-        <p>ملکی پیدا نشد</p>
-      </div>
-      {% endif %}
+                                    </h2>
+                                </div>
+                                <div class="card-body">
+                                    <div class="listing-heading text-center">
+                                        <h4 class="text-primary">{{ listing.title }}</h4>
+                                        <p>
+                                            <i class="fas fa-map-marker text-secondary"></i>
+                                            {{ listing.city }} {{ listing.state }} {{ listing.zip }}
+                                        </p>
+                                    </div>
+                                    <hr/>
+                                    <div class="row py-2 text-secondary">
+                                        <div class="col-6">
+                                            <i class="fas fa-th-large"></i> فوت مربع: {{ listing.sqft }}
+                                        </div>
+                                        <div class="col-6">
+                                            <i class="fas fa-car"></i> پارکینگ: {{ listing.garage }}
+                                        </div>
+                                    </div>
+                                    <div class="row py-2 text-secondary">
+                                        <div class="col-6">
+                                            <i class="fas fa-bed"></i> اتاق خواب: {{ listing.bedrooms }}
+                                        </div>
+                                        <div class="col-6">
+                                            <i class="fas fa-bath"></i> سرویس بهداشتی: {{ listing.bathrooms }}
+                                        </div>
+                                    </div>
 
-    </div>
-  </div>
-</section>
+                                    <hr/>
+                                    <div class="row py-2 text-secondary">
+                                        <div class="col-12">
+                                            <i class="fas fa-user"></i> {{ listing.realtor }}
+                                        </div>
+                                    </div>
+                                    <div class="row text-secondary pb-2">
+                                        <div class="col-6">
+                                            <i class="fas fa-clock"></i> {{ listing.list_date | timesince }}
+                                        </div>
+                                    </div>
+                                    <div class="row text-secondary">
+                                        <div class="col-6"><i class="fas fa-hashtag">
+                                        </i>
+                                            {% for cat in listing.category.all %}
+                                            <a href="{% url 'category' cat.slug %}">
+                                                #{{ cat.title }}
+                                            </a>
+                                        {% endfor %}
+                                        </div>
+                                    </div>
+                                    <hr/>
+                                    <a
+                                            href="{% url 'listing' listing.id %}"
+                                            class="btn btn-primary btn-block"
+                                    >جزئیات بیشتر</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    <div class="col-md-12">
+                        <p>هیچ ملکی ثبت نشده است</p>
+                    </div>
+                {% endif %}
+            </div>
+
+            <!-- Pages Nav -->
+
+            <div class="row">
+                <div class="col-md-12">
+                    {% if listings.has_other_pages %}
+                        <ul class="pagination">
+                            {% if listings.has_previous %}
+                                <li class="page-item">
+                                    <a href="?page={{ listings.previous_page_number }}" class="page-link"
+                                    >&laquo;</a
+                                    >
+                                </li>
+
+                            {% else %}
+
+                                <li class="page_item disabled">
+                                    <a class="page-link">&laquo;</a>
+                                </li>
+
+                            {% endif %}
+
+                            {% for i in listings.paginator.page_range %}
+
+                                {% if listings.number == i %}
+
+                                    <li class="page-item active">
+                                        <a class="page-link">{{ i }}</a>
+                                    </li>
+
+                                {% else %}
+                                    <li class="page-item">
+                                        <a href="?page={{ i }}" class="page-link">{{ i }}</a>
+                                    </li>
+                                {% endif %}
+
+                            {% endfor %}
+
+                            {% if listings.has_next %}
+                                <li class="page-item">
+                                    <a href="?page={{ listings.next_page_number }}" class="page-link"
+                                    >&raquo;</a
+                                    >
+                                </li>
+
+                            {% else %}
+
+                                <li class="page_item disabled">
+                                    <a class="page-link">&raquo;</a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
