--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -20,56 +20,10 @@
                         </a>
                     {% endfor %}
                     <div class="search">
-                        <form action="{% url 'search' %}">
+                        <form method="get" action="{% url 'search_results' %}">
                             <!-- Form Row 1 -->
-                            <div class="form-row">
-                                <div class="col-md-6 mb-3">
-                                    <label class="sr-only">شهر</label>
-                                    <input
-                                            type="text"
-                                            name="keywords"
-                                            class="form-control"
-                                            placeholder="شهر"
-                                    />
-                                </div>
-
-                                <div class="col-md-6 mb-3">
-                                    <label class="sr-only">منطقه ، محله</label>
-                                    <input
-                                            type="text"
-                                            name="city"
-                                            class="form-control"
-                                            placeholder="منطقه ، محله"
-                                    />
-                                </div>
-
-
-                            </div>
-                            <!-- Form Row 2 -->
-                            <div class="form-row">
-                                <div class="col-md-6 mb-3">
-                                    <label class="sr-only">اتاق خواب ها</label>
-                                    <select name="bedrooms" class="form-control">
-                                        <option selected="true" disabled="disabled"> تعداد اتاق خواب</option>
-                                        {% for key, value in bedroom_choices.items %}
-                                            <option value="{{ key }}">{{ value }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <select name="price" class="form-control" id="type">
-                                        <option selected="true" disabled="disabled"
-                                        >حداکثر قیمت
-                                        </option>
-                                        {% for key, value in price_choices.items %}
-                                            <option value="{{ key }}">{{ value }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                            </div>
-                            <button class="btn btn-secondary btn-block mt-4" type="submit">
-                                جست و جو
-                            </button>
+                              <input name="q" type="text" placeholder="Search...">
+                              <button>جست و جو</button>
                         </form>
                     </div>
                 </div>
